<resources>
    <string name="app_name">CarDealer</string>
    <string name="sign_in">Sign in</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="sign_up">Sign up</string>
    <string name="user_name">Username</string>
    <string name="confirm_password">Confirm the password</string>
    <string name="brand">Brand</string>
    <string name="year_of_issue">Year of issue</string>
    <string name="mileage">Mileage</string>
    <string name="characteristics">Characteristics</string>
    <string name="body">Body</string>
    <string name="color">Color</string>
    <string name="engine">Engine</string>
    <string name="transmission">Transmission</string>
    <string name="drive_unit">Drive unit</string>
    <string name="buy_now">Buy now</string>
    <string name="call">Call</string>
    <string name="sign_up_for_test_drive">Sign up for a test drive</string>
    <string name="brands">Brands</string>
    <string name="favourite">Favourite</string>
    <string name="filters">Filters</string>
    <string name="price">Price</string>
    <string name="engine_capacity">Engine capacity</string>
    <string name="engine_power">Engine power</string>
    <string name="profile">Profile</string>
    <string name="about">About me</string>
    <string name="notifications">Notifications</string>
    <string name="darkTheme">Dark theme</string>
    <string name="clearSearchHistory">Clear search history</string>
    <string name="aboutApp">About app</string>
    <string name="home">Home</string>
    <string name="cancel">Cancel</string>
    <string name="search_ads">Search by advertisements</string>
    <string name="search">Search</string>
    <string name="search_results">Searching results</string>
    <string name="no_connection">No internet connection</string>
    <string name="try_again">Try again</string>
    <string name="no_data">Nothing found</string>
    <string name="search_history">Search history</string>
    <string name="car_info">%1$s %2$s, %3$d</string>
    <string name="vin">VIN</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="relevant_offers">Relevant offers</string>
    <string name="favourites_list_is_empty">Favourites list is empty</string>
    <string name="settings">Settings</string>
    <string name="sort_by">Sort by</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="login">Login</string>
    <string name="log_in_to_get_additional_features">Log in to get additional features</string>
    <string name="log_in_to_add_cars_to_your_favorites">Log in to add cars to your favorites</string>

    <string-array name="makes">
        <item>Acura</item>
        <item>Alfa Romeo</item>
        <item>Aston Martin</item>
        <item>Audi</item>
        <item>Bentley</item>
        <item>BMW</item>
        <item>Bugatti</item>
        <item>Buick</item>
        <item>Cadillac</item>
        <item>Chevrolet</item>
        <item>Chrysler</item>
        <item>Datsun</item>
        <item>Dodge</item>
        <item>Ferrari</item>
        <item>Fisker</item>
        <item>Ford</item>
        <item>Genesis</item>
        <item>GMC</item>
        <item>Honda</item>
        <item>Hummer</item>
        <item>Hyundai</item>
        <item>Infiniti</item>
        <item>Isuzu</item>
        <item>Jaguar</item>
        <item>Jeep</item>
        <item>Lamborghini</item>
        <item>Land Rover</item>
        <item>Lexus</item>>
        <item>Lincoln</item>
        <item>Lotus</item>
        <item>Maserati</item>
        <item>Maybach</item>
        <item>Mazda</item>
        <item>McLaren</item>
        <item>Mercedes-Benz</item>
        <item>Mercury</item>
        <item>Mini</item>
        <item>Mitsubishi</item>
        <item>Nissan</item>
        <item>Oldsmobile</item>
        <item>Plymouth</item>
        <item>Pontiac</item>
        <item>Porsche</item>
        <item>Ram</item>
        <item>Rolls-Royce</item>
        <item>Scion</item>
        <item>Smart</item>
        <item>Subaru</item>
        <item>Suzuki</item>
        <item>Tesla</item>
        <item>Toyota</item>
        <item>Volkswagen</item>
        <item>Volvo</item>
    </string-array>

    <string-array name="sort_array">
        <item>relevant</item>
        <item>mileage min</item>
        <item>price min</item>
        <item>price max</item>
    </string-array>
    <string name="about_app">\tAutoHUB is an intuitive and powerful Android application designed for car enthusiasts who are looking for the best deals in car dealerships.\n\n\tWith the AutoHUB app, you can easily and conveniently browse a wide range of cars from leading automakers.\n\n\tDetailed descriptions of each model, photos, technical specifications, as well as price information are available to you.\n\n\tWhether you are looking for a new car, want to learn about the latest innovations in the world of cars, or just looking for inspiration, the AutoHUB app is your reliable and convenient partner who will help you make an informed choice and ensure the satisfaction of driving your dreams.</string>
    <string name="back_button">Back button</string>
    <string name="add_to_favourite_button">Add to favourite button</string>
    <string name="settings_button">Settings button</string>

</resources>