<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/fragment_settings_toolbar"
        layout="@layout/toolbar_with_back_btn" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:padding="16dp">

        <TextView
            android:id="@+id/profile"
            style="@style/TitleTextViewStyle"
            android:text="@string/settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username"
            style="@style/SmallTextViewStyle"
            android:layout_marginTop="50dp"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile" />

        <include
            android:id="@+id/settings_container"
            layout="@layout/fragment_settings_container" />

        <Button
            android:id="@+id/logoutButton"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/md_theme_light_error"
            android:text="@string/logout"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_container" />

        <Button
            android:id="@+id/logInButton"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/md_theme_light_tertiary"
            android:text="@string/login"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>